{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 355,
  "lineage": "bd6840e7-69ed-49c0-2929-9ad32157f49a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0382bfb1e80ae3a20",
            "arn": "arn:aws:ec2:us-east-1:637423200636:elastic-ip/eipalloc-0382bfb1e80ae3a20",
            "association_id": "eipassoc-057c46cb03853ac95",
            "domain": "vpc",
            "id": "eipalloc-0382bfb1e80ae3a20",
            "instance": "i-029c023218e6dea8f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09cd110ef108050f0",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-100-28-101-147.compute-1.amazonaws.com",
            "public_ip": "100.28.101.147",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_ecr_repository.model",
            "aws_iam_instance_profile.model_server",
            "aws_iam_role.ec2_role",
            "aws_instance.model_server",
            "aws_key_pair.deployer",
            "aws_security_group.model_server",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "model_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0772e0bfc7cc9c5de",
            "arn": "arn:aws:ec2:us-east-1:637423200636:instance/i-029c023218e6dea8f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "model-server_server_profile",
            "id": "i-029c023218e6dea8f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "g4dn.xlarge",
            "ipv6_address_count": 0,
            "key_name": "model-server-deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09cd110ef108050f0",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-100-28-101-147.compute-1.amazonaws.com",
            "public_ip": "100.28.101.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-093e6f1a24f1fc84f",
                "volume_size": 60,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01aafff33c7f6c03a",
            "tags": {
              "Environment": "dev",
              "Name": "model-server-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "model-server-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b54bd0458f638b92"
            ]
          },
          "dependencies": [
            "aws_ecr_repository.model",
            "aws_iam_instance_profile.model_server",
            "aws_iam_role.ec2_role",
            "aws_key_pair.deployer",
            "aws_security_group.model_server",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423200636:internet-gateway/igw-08a5261283cd01940",
            "id": "igw-08a5261283cd01940",
            "owner_id": "637423200636",
            "tags": {
              "Environment": "dev",
              "Name": "model-server-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "model-server-igw"
            },
            "vpc_id": "vpc-0d5506470c87a3c1b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-032e52af123968f74",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a5261283cd01940",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-00013b1fd85b3daef"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "model-server-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "model-server-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5506470c87a3c1b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "model_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423200636:security-group/sg-0b54bd0458f638b92",
            "description": "Security group for model server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b54bd0458f638b92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "model-server-sg",
            "name_prefix": "",
            "owner_id": "637423200636",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "model-server-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "model-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5506470c87a3c1b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423200636:subnet/subnet-01aafff33c7f6c03a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01aafff33c7f6c03a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423200636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "model-server-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "model-server-subnet"
            },
            "vpc_id": "vpc-0d5506470c87a3c1b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423200636:vpc/vpc-0d5506470c87a3c1b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-085786f93cd4acc19",
            "default_route_table_id": "rtb-0bd7bb43359cc4616",
            "default_security_group_id": "sg-0a1af4c9228d613a0",
            "dhcp_options_id": "dopt-015fb501553570932",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d5506470c87a3c1b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd7bb43359cc4616",
            "owner_id": "637423200636",
            "tags": {
              "Environment": "dev",
              "Name": "model-server-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "model-server-vpc"
            }
          }
        }
      ]
    }
  ]
}